--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "type": "module",
   "name": "gamepeer-js",
-  "version": "0.0.10",
+  "version": "0.0.12",
   "description": "Peer-to-peer gaming JS library with a ton of capabilities",
   "main": "dist/gamepeer-js.js",
   "module": "dist/gamepeer-js.esm.js",
   "files": [
     "dist"
   ],
+  "homepage": "https://gamepeerjs.netlify.app/",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/EnzoVezzaro/gamepeer-js.git"
+  },
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
