--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,7 +18,7 @@ jobs:
         run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
-          npm version patch
+          npm version --force patch
           git add package.json package-lock.json
           git commit -m "Bumped version in package.json"
           git push
