missing main push on gh actions

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,6 +2,9 @@ name: Publish Package to npm
 
 # Trigger this workflow whenever a new release is published
 on:
+  push:
+    branches:
+      - main
   release:
     types: [published]
 
