--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,6 +37,11 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      # Install dependencies (including devDependencies)
+      - name: Install dependencies
+        run: npm install
+
+      # Publish to npm
       - name: Publish to npm
         run: npm publish --access public
         env:
