--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
   "name": "gamepeer-js",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "description": "Peer-to-peer gaming JS library with a ton of capabilities",
   "main": "dist/gamepeer-js.js",
   "module": "dist/gamepeer-js.esm.js",
@@ -12,6 +12,13 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/EnzoVezzaro/gamepeer-js.git"
+  },
+  "bugs": {
+    "url": "https://github.com/EnzoVezzaro/gamepeer-js/issues"
+  },
+  "funding": {
+    "type": "individual",
+    "url": "https://github.com/sponsors/EnzoVezzaro"
   },
   "scripts": {
     "build": "rollup -c",
@@ -26,7 +33,7 @@
     "matchmaking",
     "p2p"
   ],
-  "author": "Your Name",
+  "author": "Enzo Vezzaro",
   "license": "MIT",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^24.0.0",
